<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical"
    android:paddingTop="36dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@drawable/bg_border_header_settings">

        <ImageView
            android:id="@+id/img_btn_back_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:padding="8dp"
            android:src="@drawable/ic_back_header_24" />

        <TextView
            style="@style/Title_Box_White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/settings" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_bg_settings"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/shape_round_gray">

            <LinearLayout
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/shape_circle_gray"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_recorder_settings" />
            </LinearLayout>

            <TextView
                style="@style/Body_List_Item_White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/how_to_record_your_screen" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/shape_round_gray">

            <LinearLayout
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/shape_circle_gray"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_crown" />
            </LinearLayout>

            <TextView
                style="@style/Body_List_Item_White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/upgrade_to_pro" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/shape_round_gray">

            <LinearLayout
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/shape_circle_gray"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_restore" />
            </LinearLayout>

            <TextView
                style="@style/Body_List_Item_White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/restore_purchase" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/shape_round_gray">

            <LinearLayout
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/shape_circle_gray"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_noti_ads" />
            </LinearLayout>

            <TextView
                style="@style/Body_List_Item_White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/personalized_ads_off" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/shape_round_gray">

            <LinearLayout
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/shape_circle_gray"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_available_storage" />
            </LinearLayout>

            <TextView
                style="@style/Body_List_Item_White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/available_storage_2_43gb" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/shape_round_gray">

            <LinearLayout
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/shape_circle_gray"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_recording_cache" />
            </LinearLayout>

            <TextView
                style="@style/Body_List_Item_White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/recording_cache_0_kb" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/shape_round_gray">

            <LinearLayout
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/shape_circle_gray"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_heart" />
            </LinearLayout>

            <TextView
                style="@style/Body_List_Item_White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/support_us_by_rating_our_app" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/shape_round_gray">

            <LinearLayout
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/shape_circle_gray"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_letter" />
            </LinearLayout>

            <TextView
                style="@style/Body_List_Item_White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/contact_us" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>